# thurstat

./: README.md  demo.py  requirements.txt  sandstat.py  setup.cfg
thurstat/: __init__.py  _tdist_base.py  _tdist_continuous.py  _tdist_discrete.py  _utils.py
