[metadata]
name = thurstat
version = 0.0.1
description = WIP Python probability distributions
keywords = probability, python
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe=  False
include_package_data = True
python_requires = >=3.7
packages = find:
setup_require =
    setuptools >= 39.2
install_requires = 
    cycler
    fonttools
    kiwisolver
    matplotlib
    numpy
    packaging
    Pillow
    portion
    pyparsing
    python-dateutil
    scipy
    six
    sortedcontainers
    typing_extensions
